fix overflow issue and rename class for clarity

--- a/style.css
+++ b/style.css
@@ -103,8 +103,9 @@ textarea:focus {
     position: absolute;
     background-color: #FFF;
     border-radius: 8px;
-    min-width: 500px;
+    width: 500px;
     max-height: 636px;
+    overflow-x: hidden;
     overflow-y: scroll;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -125,7 +126,7 @@ textarea:focus {
 /* Show or hide the dropdown menu with JS */
 .show {display:block;}
 
-.purple-block {
+.purple-text-block {
     display: block;
     margin-top: 0;
     margin-bottom: 0;
